[package]
name = "cribbage_server"
version = "0.1.0"
authors = ["Daniel Lyne <DLyne@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cribbage = { git = "https://github.com/scrblue/cribbage_lib" }
serde = { version = "1.0", features = ["derive"] } 
bincode = "1.2.0"
